# driver-service/internal/models/driver.go
@@ -33,4 +33,5 @@ type Driver struct {
 	Status      string             `bson:"status" json:"status"`           // Sürücünün o anki durumu. json:"status" -> API'nin yanıtını döner, bson:"status" -> veritabanında bu ad ile saklanır.
 	Rating      float64            `bson:"rating" json:"rating"`           // ortalama puan = 4.8 gibi. float döndüğünden dolayı.
 	RatingCount int                `bson:"ratingCount" json:"ratingCount"` // kaç kişinin oy kullandığını tutar.
+	Attributes  []string           `bson:"attributes" json:"attributes"`
 }
